UY-1269 QA fixes